2003-09-01  Andras Varga

	* tkapp.cc: default values for update-freq-fast and update-freq-express
	changed to 50 and 10000

2003-07-24  Andras Varga

	* implemented Inspect|Find/Inspect objects dialog, a filtered-ordered 
	dialog of all objects.

2003-07-22  Andras Varga

	* structinsp.cc/h: "Fields" tab in message inspector now recursively 
	displays embedded structs (so far it only displayed "{...}")

2003-06-16  ------ omnetpp-2.3 released ------

2003-05-26  Andras Varga

	* cOutVector inspector: added "autoscale" checkbox to Options dialog

2003-04-17  Andras Varga

	* objinsp.tcl: fixed bug which prevented cPackets (or objects 
	subclassed from it) from being inspected (Tcl error)

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-03-13  Andras Varga

	* modinsp2.tcl: fixed occasional "conn_id: no such variable" error

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-05  Andras Varga

	* modinsp2.tcl: bugfix

2003-01-29  Andras Varga

	* added "Finish" to main toolbar

	* known bug: if one sets up the Token Ring sample with 120 nodes
	(other numbers work as well), displayed ring will be broken at places.

2003-01-23  Andras Varga

	* "Step" button in module inspectors replaced with 3 buttons ("Run 
	until next local event", "Fast run until next local event", "Stop")

	* Graphical module inspector: if there're too many submodules, drawing
	may take very long, so the user is prompted if he/she really wants
	see the graphics. Limit is currently 1000 submodules. 
	The object tree view is also usable until ~1000 objects displayed in 
	the tree.

	* Note: ad-hoc load tests: with Dyna, a 8000-client network could be set 
	up and run (~12500 modules, including ServerProcs) on Win2K, 256M RAM.
	A modified version of Fifo2 (n independent Fifo networks, each with 
	3 modules using handleMessage()) could be set up with n=33300, that is,
	~100,000 modules. Process size was 280M, so it couldn't be run (too 