@@ -900,6 +900,7 @@ void TOmnetTkApp::readOptions()
     opt_updatefreq_express = ini_file->getAsInt( "Tkenv", "update-freq-express", 10000 );
     opt_bkpts_enabled = ini_file->getAsBool( "Tkenv", "breakpoints-enabled", true );
     opt_animation_enabled = ini_file->getAsBool( "Tkenv", "animation-enabled", true );
+    opt_senddirect_arrows = ini_file->getAsBool( "Tkenv", "senddirect-arrows", true );
     opt_animation_msgnames = ini_file->getAsBool( "Tkenv", "animation-msgnames", true );
     opt_animation_msgcolors = ini_file->getAsBool( "Tkenv", "animation-msgcolors", true );
     opt_animation_speed = ini_file->getAsDouble( "Tkenv", "animation-speed", 1);
@@ -935,7 +936,7 @@ void TOmnetTkApp::objectDeleted( cObject *object )
     }
 }
 
-void TOmnetTkApp::messageSent( cMessage *msg )
+void TOmnetTkApp::messageSent( cMessage *msg, cGate *directToGate)
 {
     // display in message window
     static char buf[MAX_OBJECTINFO];
@@ -950,32 +951,16 @@ void TOmnetTkApp::messageSent( cMessage *msg )
     if (animation_ok && opt_animation_enabled)
     {
         // find suitable inspectors and do animate the message...
-        char msgptr[32], msgkind[16];
-        ptrToStr(msg,msgptr);
-        sprintf(msgkind,"%d",msg->kind());
-
-        cGate *g = msg->senderGate();
-        cGate *arrivalgate = msg->arrivalGate();
-
-        while (g && g->toGate())
+        if (!directToGate)
         {
-            cModule *mod = g->ownerModule();
-            if (g->type()=='O') mod = mod->parentModule();
-
-            TInspector *insp = findInspector(mod,INSP_GRAPHICAL);
-            if (insp)
-            {
-                int lastgate = (g->toGate()==arrivalgate);
-                CHK(Tcl_VarEval(interp, "graphmodwin_animate ",
-                                        insp->windowName(), " ",
-                                        ptrToStr(g)," ",
-                                        msgptr,
-                                        " {",msg->fullName(),"} ",
-                                        msgkind," ",
-                                        (lastgate?"beg":""),
-                                        NULL));
-            }
-            g = g->toGate();
+            // message was sent via a gate (send())
+            animateSend(msg, msg->senderGate(), msg->arrivalGate());
+        }
+        else
+        {
+            // sendDirect() was used
+            animateSendDirect(msg, simulation.module(msg->senderModuleId()), directToGate);
+            animateSend(msg, directToGate, msg->arrivalGate());
         }
     }
 }
@@ -994,33 +979,244 @@ void TOmnetTkApp::messageDelivered( cMessage *msg )
 
     if (animation_ok && opt_animation_enabled)
     {
-        // find suitable inspectors and do animate the message...
-        char msgptr[32], msgkind[16];
-        ptrToStr(msg,msgptr);
-        sprintf(msgkind,"%d",msg->kind());
+        cGate *arrivalGate = msg->arrivalGate();
+        if (!arrivalGate) 
+            return;
 
-        cGate *g = msg->arrivalGate();
-        if (g) g = g->fromGate();
-        if (g)
+        // if arrivalgate is connected, msg arrived on a connection, otherwise via sendDirect()
+        if (arrivalGate->fromGate())
         {
-            cModule *mod = g->ownerModule();
-            if (g->type()=='O') mod = mod->parentModule();
-
-            TInspector *insp = findInspector(mod,INSP_GRAPHICAL);
-            if (insp)
-            {
-                CHK(Tcl_VarEval(interp, "graphmodwin_animate ",
-                                        insp->windowName(), " ",
-                                        ptrToStr(g)," ",
-                                        msgptr,
-                                        " {",msg->fullName(),"} ",
-                                        msgkind,
-                                        " end",
-                                        NULL));
-            }
+            animateDelivery(msg);
+        }
+        else
+        {
+            animateDeliveryDirect(msg);
         }
     }
 }
+
+void TOmnetTkApp::animateSend(cMessage *msg, cGate *fromgate, cGate *togate)
+{
+    char msgptr[32], msgkind[16];
+    ptrToStr(msg,msgptr);
+    sprintf(msgkind,"%d",msg->kind());
+
+    cGate *g = fromgate;
+    cGate *arrivalgate = togate;
+
+    while (g && g->toGate())
+    {
+        cModule *mod = g->ownerModule();
+        if (g->type()=='O') mod = mod->parentModule();
+
+        TInspector *insp = findInspector(mod,INSP_GRAPHICAL);
+        if (insp)
+        {
+            int lastgate = (g->toGate()==arrivalgate);
+            CHK(Tcl_VarEval(interp, "graphmodwin_animate_on_conn ",
+                                    insp->windowName(), " ",
+                                    ptrToStr(g)," ",
+                                    msgptr,
+                                    " {",msg->fullName(),"} ",
+                                    msgkind," ",
+                                    (lastgate?"beg":"thru"),
+                                    NULL));
+        }
+        g = g->toGate();
+    }
+}
+
+// helper for animateSendDirect() functions
+static cModule *findSubmoduleTowards(cModule *parentmod, cModule *towardsgrandchild)
+{
+    if (parentmod==towardsgrandchild) 
+       return NULL; // shortcut -- we don't have to go up to the top to see we missed
+
+    // search upwards from 'towardsgrandchild'
+    cModule *m = towardsgrandchild;
+    while (m && m->parentModule()!=parentmod)
+       m = m->parentModule();
+    return m;
+}
+
+void TOmnetTkApp::animateSendDirect(cMessage *msg, cModule *frommodule, cGate *togate)
+{
+    char msgptr[32], msgkind[16];
+    ptrToStr(msg,msgptr);
+    sprintf(msgkind,"%d",msg->kind());
+
+    // for animation purposes, we assume that the message travels up
+    // in the module hierarchy until it finds the first compound module
+    // that also contains the destination module (possibly somewhere deep),
+    // and then it descends to the destination module. We have to find the
+    // list of modules visited during the travel, and animate the message
+    // in their inspectors.
+
+    // first, find "lowest common ancestor" module
+    cModule *srcmod = frommodule;
+    cModule *destmod = togate->ownerModule();
+    cModule *commonparent = srcmod;
+    cModule *arrivalmod = msg->arrivalGate()->ownerModule();
+    while (commonparent)
+    {
+        // try to find commonparent among ancestors of destmod
+        cModule *m = destmod;
+        while (m && commonparent!=m)
+            m = m->parentModule();
+        if (commonparent==m)
+            break;
+        commonparent = commonparent->parentModule();
+    }
+
+    // commonparent should exist, worst case it's the system module,
+    // but let's have the following "if" anyway...
+    if (!commonparent) 
+        return;
+
+    // animate the ascent of the message until commonparent (excluding).
+    // The second condition, destmod==commonparent covers case when we're sending 
+    // to an output gate of the parent (grandparent, etc) gate.
+    cModule *mod = srcmod;
+    while (mod!=commonparent && (mod->parentModule()!=commonparent || destmod==commonparent))
+    {
+        cModule *enclosingmod = mod->parentModule();
+        ev << "DBG: animate ascent inside " << enclosingmod->fullPath()
+           << " from " << mod->fullPath() << endl; // FIXME
+        TInspector *insp = findInspector(enclosingmod,INSP_GRAPHICAL);
+        if (insp)
+        {
+            char parentptr[30], modptr[30];
+            strcpy(parentptr,ptrToStr(enclosingmod));
+            strcpy(modptr,ptrToStr(mod));
+            CHK(Tcl_VarEval(interp, "graphmodwin_animate_senddirect_ascent ",
+                                    insp->windowName(), " ",
+                                    parentptr," ",
+                                    modptr," ",
+                                    msgptr,
+                                    " {",msg->fullName(),"} ",
+                                    msgkind," ",
+                                    "thru", // cannot be "beg" (msg ball cannot stay on encl.module rect)
+                                    NULL));
+        }
+        mod = mod->parentModule();
+    }
+
+    // animate within commonparent
+    if (commonparent!=srcmod && commonparent!=destmod)
+    {
+        cModule *from = findSubmoduleTowards(commonparent, srcmod);
+        cModule *to = findSubmoduleTowards(commonparent, destmod);
+
+        // animate inside commonparent (msg moves between two modules)
+        ev << "DBG: animate horiz in " << commonparent->fullPath() << 
+              " from " << from->fullPath() << " to " << to->fullPath() << endl; // FIXME
+
+        TInspector *insp = findInspector(commonparent,INSP_GRAPHICAL);
+        if (insp)
+        {
+            char fromptr[30], toptr[30];
+            strcpy(fromptr,ptrToStr(from));
+            strcpy(toptr,ptrToStr(to));
+            CHK(Tcl_VarEval(interp, "graphmodwin_animate_senddirect_horiz ",
+                                    insp->windowName(), " ",
+                                    fromptr," ",
+                                    toptr," ",
+                                    msgptr,
+                                    " {",msg->fullName(),"} ",
+                                    msgkind," ",
+                                    (to==arrivalmod?"beg":"thru"),
+                                    NULL));
+        }
+
+    }
+
+    // descend from commonparent to destmod
+    mod = findSubmoduleTowards(commonparent, destmod);
+    if (mod && srcmod!=commonparent) 
+        mod = findSubmoduleTowards(mod, destmod);
+    while (mod)
+    {
+        // animate descent towards destmod
+        cModule *enclosingmod = mod->parentModule();
+        ev << "DBG: animate descent in " << enclosingmod->fullPath() << 
+           " to " << mod->fullPath() << endl; // FIXME
+
+        TInspector *insp = findInspector(enclosingmod,INSP_GRAPHICAL);
+        if (insp)
+        {
+            char parentptr[30], modptr[30];
+            strcpy(parentptr,ptrToStr(enclosingmod));
+            strcpy(modptr,ptrToStr(mod));
+            CHK(Tcl_VarEval(interp, "graphmodwin_animate_senddirect_descent ",
+                                    insp->windowName(), " ",
+                                    parentptr," ",
+                                    modptr," ",
+                                    msgptr,
+                                    " {",msg->fullName(),"} ",
+                                    msgkind," ",
+                                    (mod==arrivalmod?"beg":"thru"),
+                                    NULL));
+        }
+
+        // find module 'under' mod, towards destmod (this will return NULL if mod==destmod)
+        mod = findSubmoduleTowards(mod, destmod);
+    }
+}
+
+void TOmnetTkApp::animateDelivery(cMessage *msg)
+{
+    char msgptr[32], msgkind[16];
+    ptrToStr(msg,msgptr);
+    sprintf(msgkind,"%d",msg->kind());
+
+    // find suitable inspectors and do animate the message...
+    cGate *g = msg->arrivalGate();
+    ASSERT(g);
+    g = g->fromGate();
+    ASSERT(g);
+
+    cModule *mod = g->ownerModule();
+    if (g->type()=='O') mod = mod->parentModule();
+
+    TInspector *insp = findInspector(mod,INSP_GRAPHICAL);
+    if (insp)
+    {
+        CHK(Tcl_VarEval(interp, "graphmodwin_animate_on_conn ",
+                                insp->windowName(), " ",
+                                ptrToStr(g)," ",
+                                msgptr,
+                                " {",msg->fullName(),"} ",
+                                msgkind,
+                                " end",
+                                NULL));
+    }
+}
+
+void TOmnetTkApp::animateDeliveryDirect(cMessage *msg)
+{
+    char msgptr[32], msgkind[16];
+    ptrToStr(msg,msgptr);
+    sprintf(msgkind,"%d",msg->kind());
+
+    // find suitable inspectors and do animate the message...
+    cGate *g = msg->arrivalGate();
+    ASSERT(g);
+    cModule *destmod = g->ownerModule();
+    cModule *mod = destmod->parentModule();
+
+    TInspector *insp = findInspector(mod,INSP_GRAPHICAL);
+    if (insp)
+    {
+        CHK(Tcl_VarEval(interp, "graphmodwin_animate_senddirect_delivery ",
+                                insp->windowName(), " ",
+                                ptrToStr(destmod)," ",
+                                msgptr,
+                                " {",msg->fullName(),"} ",
+                                msgkind,
+                                NULL));
+    }
+}
+
 
 void TOmnetTkApp::breakpointHit( const char *label, cSimpleModule *mod )
 {
